# pyArrView

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
pyArrView/: __init__.py
src/pyArrView/: __init__.py  arrView.py
src/pyArrView/ui/: DimensionSelector.py  ImageViewer.py  MainWindow.py  __init__.py  utils.py
