[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyArrView"
version = "0.3.0"
authors = [{ name = "Bilal Tasdelen", email = "billtasdelen@gmail.com"}]
maintainers = [
  { name = "Bilal Tasdelen" },
]
description = "Multi-dimensional Array Viewer in Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6.3"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
  "PySide6",
]

[tool.setuptools.package-data]
ismrmrdviewer = ["resources/icons/*.png", "resources/icons/*.svg"]
